Updated the css to prevent horizontal overflow in the document, and not to display a message triggered by mouse hovering when on mobile.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -7,6 +7,7 @@ body {
     margin: 0px;
     /* height: 100%; */
     font-family: sans-serif;
+    overflow-x: hidden;
 }
 
 :root {
